--- a/index.html
+++ b/index.html
@@ -2,21 +2,64 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Duck CSS Design</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Notif</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<body>
-    <div class="figure">
-        <section class="duck">
-            <div class="duck__body"></div>
-            <div class="duck__mouth"></div>
-        </section>
-        <div class="water"></div>
+<div class='phone'>
+  <div class='screen'>
+    <div class='notification'>Semangat Caca</div>
+    <div class='header'>Future Wife</div>
+    <div class='texts'>
+      <div class='blocker'></div>
+      <div class='text'>Hallo Cantiknya aku Caca!</div>
+      <div class='text'>Been thinking about you the whole day 😝</div>
+      <div class='text'>How was your day?</div>
+      <div class='text'>Happy ?</div>
+      <div class='text'>Sad ? </div>
+      <div class='text'>exhausting ? </div>
+      <div class='text'>I hope you have a wonderfull day 😊 </div>
+      <div class='text'>🐤</div>
+      <div class='text'>Don't forget your meal !</div>
+      <div class='text'>Don't forget to drink !</div>
+      <div class='text'>Take care of your health! ok !</div>
+      <div class='text'>🐤</div>
+      <div class='text'>I saw a pretty cloud today!</div>
+      <div class='text'>You're prettier...</div>
+      <div class='text'>🐤</div>
+      <div class='text'>Call me when you at home okey</div>
+      <div class='text'>Miss u</div>
+      <div class='text'>Love u</div>
     </div>
-</body>
+    <div class='keyboard'>
+      <div class='input'></div>
+      <div class='row'>qwertyuiop</div>
+      <div class='row'>asdfghjkl</div>
+      <div class='row'>zxcvbnm</div>
+      <div class='row'></div>
+    </div>
+  </div>
+</div>
+<div class='victim'>
+  <div class='head'>
+    <div class='eyes'>
+      <div class='eye'></div>
+      <div class='eye'>
+      </div>
+    </div>
+    <div class='mouth'></div>
+  </div>
+  <div class='body'>
+    <div class='arm left'></div>
+    <div class='arm right'></div>
+    <div class='mobile'></div>
+    <div class='foot left'></div>
+    <div class='foot right'></div>
+  </div>
+</div>
 <!-- partial -->
   
 </body>
